<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_black"
        app:title="@string/app_name"
        app:navigationIcon="@drawable/ic_wealth"
        app:menu="@menu/top"
        app:titleTextColor="@color/white"/>


    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridView"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/bottomnavview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        app:alignmentMode="alignMargins"
        app:columnCount="3"
        app:rowCount="3">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="8dp"
            app:layout_row="0"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/basic"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/_16sdp" />

                <ImageView
                    android:id="@+id/btPurchaseCons"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_money"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="8dp"
            app:layout_row="0"
            app:layout_column="1"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moderate"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/_16sdp" />

                <ImageView
                    android:id="@+id/btnModerate"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_earn"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="8dp"
            app:layout_row="1"
            app:layout_column="0"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quite"
                    android:textColor="@color/yellow"
                    android:gravity="center"
                    android:textSize="@dimen/_16sdp"/>

                <ImageView
                    android:id="@+id/btnQuite"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_rich_man"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="8dp"
            app:layout_row="1"
            app:layout_column="1"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/yellow"
                    android:gravity="center"
                    android:text="@string/ultimate"
                    android:textSize="@dimen/_16sdp"/>

                <ImageView
                    android:id="@+id/btnUltimate"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_money_bag"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="8dp"
            app:layout_row="2"
            app:layout_column="0"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monthly"
                    android:textColor="@color/light_blue"
                    android:gravity="center"
                    android:textSize="@dimen/_16sdp"/>

                <ImageView
                    android:id="@+id/btnMonthly"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_bonus"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="8dp"
            app:layout_row="2"
            app:layout_column="1"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/light_blue"
                    android:gravity="center"
                    android:text="@string/yearly"
                    android:textSize="@dimen/_16sdp"/>

                <ImageView
                    android:id="@+id/btnYearly"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_gift_box"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.gridlayout.widget.GridLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomnavview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom"
        app:labelVisibilityMode="labeled"/>

</RelativeLayout>